# DEADFLASH

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md
.github/: release-notes-v1.0.0.md
.github/workflows/: ci.yml  release-v1.0.0.yml  release.yml
assets/: deadflash-gui.ico.b64
assets/screenshots/: README.txt
bench/: PROOF_BENCHMARK.txt
bench/hardware/: README.txt
bench/results/: 2026-07-11-file-proof-runs.csv  2026-07-11-file-proof-summary.json  2026-07-11-local-validation.txt  2026-07-11-win32-surface-validation.txt  README.txt  deadflash-evidence-20260711-082828.json  deadflash-evidence-20260711-155239.json  deadflash-evidence-20260711-164233.json  msvc-e2e-20260711T001029Z.json  msvc-e2e-20260711T004922Z.json  msvc-e2e-20260711T012636Z.json  msvc-e2e-20260711T091840Z.json  msvc-e2e-20260714T095638Z.json  msvc-e2e-20260714T103504Z.json  msvc-qualification-20260711T000313Z.json  msvc-qualification-20260711T001029Z.json  msvc-qualification-20260711T004922Z.json  msvc-qualification-20260711T012218Z.json  msvc-qualification-20260711T012636Z.json  msvc-qualification-20260711T090901Z.json  msvc-qualification-20260711T091840Z.json  msvc-qualification-20260714T094300Z.json  msvc-qualification-20260714T095638Z.json  msvc-qualification-20260714T103504Z.json
docs/: ARCHITECTURE.md  BENCHMARK_PROTOCOL.md  COMMANDS.txt  COMPARISON_RECORD_FORMAT.md  EVIDENCE_STATES.txt  FEATURE_MATRIX.md  GUI.txt  IMPLEMENTED_EDGE.txt  NO_MAGIC.md  PROOF_FORMAT.md  QUALIFICATION_IMAGE.md  RELEASE_GATE.md  RUFUS_COMPARISON_SCOPE.md  SAFETY_MODEL.md  TEST_MATRIX.txt  USB_QUALIFICATION.md  WINDOWS_MSVC_QUALIFICATION.md
include/deadflash/: attest.h  clean.h  common.h  fat32.h  io.h  proof.h  report.h  sha256.h
scripts/: add-comparison-run.py  benchmark-deadflash.ps1  benchmark-deadflash.sh  benchmark-proof.py  check-gui-binary.ps1  check-win32-surface.sh  compare-benchmarks.py  e2e-proof.py  make-qualification-image.py  materialize-gui-icon.ps1  publish-v1.0.0-local.ps1  qualify-msvc.ps1  qualify-msvc.py  qualify-usb.py  test-benchmark-comparator.py  test-qualification-image.py
src/: attest.c  clean.c  clean_stub.c  common.c  deadflash-gui.manifest  deadflash-gui.rc  deadflash-gui.rc.in  device.c  fat32.c  gui_brand.c  gui_brand_preinclude.h  gui_win32.c  gui_win32_bootstrap.c  gui_win32_final.c  gui_win32_v2.c  main.c  pipeline.c  proof.c  proof_main.c  report.c  resource.h  sha256.c
tests/: test_attest.c  test_clean.c  test_fat32.c  test_fingerprint.c  test_identity.c  test_pipeline.c  test_proof.c  test_sha256.c
tests/win32-stubs/: malloc.h  wctype.h  windows.h  winioctl.h
